// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: AvatarNameListMsg matches snapshot 1`] = `
<a
  href="/accounts/desmos1jrld5g998gqm4yx26l6cvhxz7y5adgxquy94nz"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  <a
    className="MuiTypography-root MuiTypography-body1 css-1hinuoh-MuiTypography-root-root"
  >
    name
  </a>
</a>
`;

exports[`components: AvatarNameListMsg matches snapshot with empty values 1`] = `null`;

exports[`components: AvatarNameListMsg matches snapshot with multiple values 1`] = `
[
  <a
    href="/accounts/desmos1jrld5g998gqm4yx26l6cvhxz7y5adgxquy94nz"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <a
      className="MuiTypography-root MuiTypography-body1 css-1hinuoh-MuiTypography-root-root"
    >
      name-1
    </a>
  </a>,
  " ",
  "and",
  " ",
  <a
    href="/accounts/desmos1jrld5g998gqm4yx26l6cvhxz7y5adgxquy94xx"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <a
      className="MuiTypography-root MuiTypography-body1 css-1hinuoh-MuiTypography-root-root"
    >
      name-2
    </a>
  </a>,
]
`;
